--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <!--<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
+          </a>-->
           <a class="brand" href="#">ROFLCon Livenote Index</a>
 <!--          <div class="btn-group pull-right">
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
@@ -62,73 +62,42 @@
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
-          </div><!--/.nav-collapse -->
+          </div>--><!--/.nav-collapse -->
         </div>
       </div>
     </div>
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span3">
+        <div class="span4">
           <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
+            <ul class="nav nav-list" id="roflbar">
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span9">
+        <div class="span8">
           <div class="hero-unit">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+            <h1>Keynote Panel: Supercuts</h1>
+            <p>Saturday, 9:30AM</p>
+            <p>This particular thing includes information about the livenotes and invites people to choose one of the options to follow along.</p>
+            <!--<p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
           </div>
           <div class="row-fluid">
             <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
+              <!--<h2>Link Hound</h2>-->
+              <p><a class="btn btn-large" href="#">Play Link Hound &raquo;</a></p>
+              <p>Volunteer to find links, inserting them into the livenotes. <strong>Use html formatting, please</strong>! Feel free to add nice-to-have information like Twitter handles and event photos.</p>
             </div><!--/span-->
             <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
+              <!--<h2>Sweeper</h2>-->
+              <p><a class="btn btn-large" href="#">Play Sweeper &raquo;</a></p>
+              <p>Volunteer to check the speaker's facts, fix grammar mistakes, and tidy up the content.</p>
             </div><!--/span-->
             <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-          </div><!--/row-->
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
+              <!--<h2>Ghost</h2>-->
+              <p><a class="btn btn-large" href="#">Read Livenotes &raquo;</a></p>
+              <p>Let me in; I just want to follow the livenotes!</p>
+              <p>If you see a quote missed by the livenotes, please add them in.</p>
             </div><!--/span-->
           </div><!--/row-->
         </div><!--/span-->
@@ -137,13 +106,17 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p>ROFLCon Livenote Index by <a href="http://twitter.com/natematias">J. Nathan Matias</a>, from the MIT Media Lab <a href="http://civic.mit.edu">Center for Civic Media</a></p>
       </footer>
 
     </div><!--/.fluid-container-->
 
     <!-- Le javascript
     ================================================== -->
+    <script language="javascript" type="text/Javascript" src="bootstrap/js/jquery-1.7.2.min.js"></script>
+    <script language="javascript" type="text/Javascript" src="bootstrap/js/underscore.js"></script>
+    <script language="javascript" type="text/Javascript" src="bootstrap/js/backbone.js"></script>
+    <script language="javascript" type="text/Javascript" src="app/views.js"></script>
     <!-- Placed at the end of the document so the pages load faster -->
   </body>
 </html>
