updated main listing template

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <h1>Keynote Panel: Supercuts</h1>
             <p>Saturday, 9:30AM</p>
             <p>This particular thing includes information about the livenotes and invites people to choose one of the options to follow along.</p>
+            <p><a href="http://civic.mit.edu/blog/mstem/how-to-liveblog-events-with-a-team">Read more about how to liveblog with a team</a>.</p>
             <!--<p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
           </div>
           <div class="row-fluid">
