--- a/index.html
+++ b/index.html
@@ -75,13 +75,15 @@
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span8" id='mainListing'>
-          <div class="hero-unit">
-            <h1>Keynote Panel: Supercuts</h1>
-            <p>Saturday, 9:30AM</p>
-            <p>This particular thing includes information about the livenotes and invites people to choose one of the options to follow along.</p>
-            <p><a href="http://civic.mit.edu/blog/mstem/how-to-liveblog-events-with-a-team">Read more about how to liveblog with a team</a>.</p>
-            <!--<p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
+        <div class="span8">
+          <div id="mainListing">
+            <div class="hero-unit">
+              <h1>Keynote Panel: Supercuts</h1>
+              <p>Saturday, 9:30AM</p>
+              <p>This particular thing includes information about the livenotes and invites people to choose one of the options to follow along.</p>
+              <p><a href="http://civic.mit.edu/blog/mstem/how-to-liveblog-events-with-a-team">Read more about how to liveblog with a team</a>.</p>
+              <!--<p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
+            </div>
           </div>
           <div class="row-fluid">
             <div class="span4">
@@ -123,6 +125,10 @@
                     <h1><%=title%></h1>
                     <h2>Time: <%=time%></h2>
                     <p>Here is a description about liveblogging, with links to the hashtag and mstem and natematias's twitter accounts.</p>
+                    <ul>
+                      <li><a href="http://civic.mit.edu/blog/mstem/how-to-liveblog-events-with-a-team">How to liveblog with a team</a></li>
+                      <li><a href="http://www.lunchoverip.com/conferencebloggers.html">Tips for Conference Bloggers</a></li>
+                    </ul>
          </div>
      </script>
      <script type='text/template' id='menuItemTemplate'>
