--- a/index.html
+++ b/index.html
@@ -85,20 +85,17 @@
               <!--<p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
             </div>
           </div>
-          <div class="row-fluid">
+          <div id="actions" class="row-fluid disabled">
             <div class="span4">
-              <!--<h2>Ghost</h2>-->
               <p><a class="btn btn-large" id="read" href="#">Read Livenotes &raquo;</a></p>
               <p>Let me in; I just want to follow the livenotes!</p>
               <p>If you do see an awesome quote we missed, please add it.</p>
             </div><!--/span-->
             <div class="span4">
-              <!--<h2>Link Hound</h2>-->
               <p><a class="btn btn-large" id="linkhound" href="#">Play Link Hound &raquo;</a></p>
               <p>Volunteer to find links, inserting them into the livenotes. <strong>Use html formatting, please</strong>! Feel free to add nice-to-have information like Twitter handles and event photos.</p>
             </div><!--/span-->
             <div class="span4">
-              <!--<h2>Sweeper</h2>-->
               <p><a class="btn btn-large" id="sweeper" href="#">Play Sweeper &raquo;</a></p>
               <p>Volunteer to check the speaker's facts, fix grammar mistakes, and tidy up the content.</p>
             </div><!--/span-->
@@ -147,9 +144,9 @@ og-events-with-a-team">How to liveblog with a team</a>, by Matt Stempeck and Eth
     <script type='text/template' id='defaultListingTemplate'>
       <div class="hero-unit">
                     <h1>ROFLCon Liveblogs</h1>
-                    <p><a href="http://roflcon.org/the-roflcon-iii-almost-final-schedule/">ROFLCon</a> is being liveblogged by <a href="http://twitter.com/natematias">J. Nathan Matias</a>, <a href="http
-://twitter.com/mstem">Matt Stempeck</a>, and <a href="http://twitter.com/s2tephe
-n">Stephen Suen</a>.</p>
+                    <p><a href="http://roflcon.org/the-roflcon-iii-almost-final-schedule/">ROFLCon</a> is being liveblogged by <a href="http://twitter.com/natematias">J. Nathan Matias</a>, <a href="http://twitter.com/mstem">Matt Stempeck</a>, and <a href="http://twitter.com/s2tephen">Stephen Suen</a>.</p>
+                    <p>To follow the notes for a session, select it from the list on the left. You can then choose to be a reader or to contribute to the liveblogging with comments and links.</p>
+                    <p>You can get the <a href="http://roflcon.org/the-roflcon-iii-almost-final-schedule/">almost-final ROFLCon Schedule here</a>.</p>
       </div>
     </script>
 
